--- a/index.html
+++ b/index.html
@@ -89,15 +89,15 @@
       </div>
       <div class="col-lg-4 callout"> <i class="fa fa-desktop fa-3x"></i>
         <h3>CyanogenMod Based</h3>
-        <p><a href="http://www.nianrom.cn/miui/nian/m0/visit.php">中文版日志</a><br><a href="http://www.nianrom.cn/miui/nian/m0_en/visit.php">English Changelog</a></p>
+        <p><a href="https://github.com/nian0114/Website/tree/gh-pages/miui/nian/m0">中文版日志</a><br><a href="https://github.com/nian0114/Website/tree/gh-pages/miui/nian/m0_en">English Changelog</a></p>
       </div>
       <div class="col-lg-4 callout"> <i class="fa fa-gears fa-3x"></i>
         <h3>Samsung Based</h3>
-        <p><a href="http://www.nianrom.cn/miui/nian/sam/visit.php">中文版日志</a><br><a href="http://www.nianrom.cn/miui/nian/sam_en/visit.php">English Changelog</a></p>
+        <p><a href="https://github.com/nian0114/Website/tree/gh-pages/miui/nian/sam">中文版日志</a><br><a href="http://www.nianrom.cn/miui/nian/sam_en/sam_en">English Changelog</a></p>
       </div>
       <div class="col-lg-4 callout"> <i class="fa fa-dot-circle-o fa-3x"></i>
         <h3>Omni Based</h3>
-        <p><a href="http://www.nianrom.cn/miui/nian/omni/visit.php">中文版日志</a><br><a href="http://www.nianrom.cn/miui/nian/omni_en/visit.php">English Changelog</a></p>
+        <p><a href="https://github.com/nian0114/Website/tree/gh-pages/miui/nian/omni">中文版日志</a><br><a href="https://github.com/nian0114/Website/tree/gh-pages/miui/nian/omni_en">English Changelog</a></p>
       </div>
     </div>
     <!-- row --> 
