fix san based link error

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       </div>
       <div class="col-lg-4 callout"> <i class="fa fa-gears fa-3x"></i>
         <h3>Samsung Based</h3>
-        <p><a href="https://github.com/nian0114/Website/tree/gh-pages/miui/nian/sam">中文版日志</a><br><a href="http://www.nianrom.cn/miui/nian/sam_en/sam_en">English Changelog</a></p>
+        <p><a href="https://github.com/nian0114/Website/tree/gh-pages/miui/nian/sam">中文版日志</a><br><a href="https://github.com/nian0114/Website/tree/gh-pages/miui/nian/sam_en">English Changelog</a></p>
       </div>
       <div class="col-lg-4 callout"> <i class="fa fa-dot-circle-o fa-3x"></i>
         <h3>Omni Based</h3>
