更新统计代码

--- a/index.html
+++ b/index.html
@@ -175,5 +175,6 @@
 <script type="text/javascript" src="assets/js/jquery.easing.1.3.js"></script> 
 <script type="text/javascript" src="assets/js/smoothscroll.js"></script> 
 <script type="text/javascript" src="assets/js/jquery-func.js"></script>
+<script type="text/javascript" src="http://tajs.qq.com/stats?sId=40600513" charset="UTF-8"></script>
 </body>
 </html>
