--- a/miui/nian/m0/nian_i9300_5.7.31.html
+++ b/miui/nian/m0/nian_i9300_5.7.31.html
@@ -57,7 +57,7 @@ a {
             <li>优化 启用Android 5.0 动画效果</li>
             <li>优化 安全中心新增强力清理快捷方式</li>
             <li>优化 拨号启动速度</li>
-			<li><font color="red"><a href="http://www.nianrom.cn/miui/nian/m0_en/5.7.31.html">Show English Changelog</font></li>
+			<li><font color="red"><a href="http://nianrom.cn/miui/nian/m0_en/nian_cm_5.7.31.html">Show English Changelog</font></li>
         </ul>
     </div>
 </body>
