Update English Version

--- a/miui/nian/omni_en/nian_omni_5.8.1.html
+++ b/miui/nian/omni_en/nian_omni_5.8.1.html
@@ -42,22 +42,18 @@ a {
 
 <body>
 <div id="update">
-        <h3>系统</h3>
-        <!-- li就是一个菜单,不用狂加无序列表....看你们的我也是醉了... -->
+        <h3>System</h3>
   		<ul>
-            <li>修复 本地备份完成后，通知栏留存通知问题</li>
-            <li>修复 本地备份无法恢复桌面布局问题</li>
-            <li>修复 防误触过于灵敏问题</li>
-            <li>修复 锁屏睡死，通话睡死问题</li>
-            <li>修复 一个后台错误，该错误会导致发热和耗电</li>
-            <li>移除 神隐模式（官方在源码里移除了）</li>
-            <li>移除 原厂设置，唤醒前检查距离感应器</li>
-            <li>优化 文件管理器全新改版</li>
-            <li>优化 启用Android 5.0 动画效果</li>
-            <li>优化 安全中心新增强力清理快捷方式</li>
-            <li>优化 拨号启动速度</li>
-			<li><font color="red"><a href="http://nianrom.cn/miui/nian/sam_en/nian_sam_en_5.8.1.html">Show English Changelog</font></li>
+            <li>Fix - Deep Sleep</li>
+<li>Fix - Sometimes MMS could not be downloaded automatically</li>
+<li>Optimization - Changed apps launching animated effects to Android 5.0 effect </li>
+<li>Fix - Sometimes home screen crashed </li>
+<li>Fix - ActionBar title changed suddenly when entering home screen settings from settings </li>
+<li>Optimization - Launching Music app with WiFi connected will display the main page (Discover/My Music) users last exited from </li>
+<li>Optimization - Optimized prompt text when unsupported characters are used for renaming folders</li>
+<li>Optimization - Improved stability when copying files </li>
+<li>Optimization - Optimized creating new events page launching speed </li>
         </ul>
-    </div>
+</div>
 </body>
 </html>
