--- a/miui/nian/m0_en/nian_cm_5.8.16.html
+++ b/miui/nian/m0_en/nian_cm_5.8.16.html
@@ -38,6 +38,7 @@
 		<div id="update">
         <h2 class="h2_2">Changelog</h2>
         <h3><font color="red">This version is MIUI7. 5.8.15 is the final version of MIUI6.</font></h3>
+		<h3><font color="red">This veresion recommend wipe after backup data by yourself.</font></h3>
         <h3>System</h3>
   		<ul>
             <li>New -Status bar Animation(08-07)</li>
