--- a/miui/nian/m3/nian_sc03e_5.8.16.html
+++ b/miui/nian/m3/nian_sc03e_5.8.16.html
@@ -38,6 +38,7 @@
 		<div id="update">
         <h2 class="h2_2">更新日志</h2>
         <h3><font color="red">此版本为MIUI7，MIUI6最终版本为5.8.15</font></h3>
+		<h3><font color="red">由于是大版本更新，推荐用户备份数据后wipe刷入</font></h3>
         <h3>锁屏、状态栏、通知栏</h3>
   		<ul>
             <li>新增 通知栏开关动画 (08-07)</li>
