--- a/miui/nian/sam/nian_i9305_5.11.14.html
+++ b/miui/nian/sam/nian_i9305_5.11.14.html
@@ -47,7 +47,7 @@ a {
             <li>新增 部分机型更换内核 (11-11)</li>
             <li>优化 更新小米视频至最新版本(11-11)</li>
             <li>修复 流量购买过程出现的FC (11-11)</li>
-            <li>修复 录音机后台使用时FC (11-11)</li>
+            <li>修复 收音机后台使用时FC (11-11)</li>
 			<li>新增 文件管理器支持将文件夹设为私密文件夹 (11-10)</li>
             <li>新增 小米快传 (11-10)</li>
             <li>新增 锁屏画报 (11-10)</li>
