--- a/miui/nian/sam/nian_i9305_5.12.17.html
+++ b/miui/nian/sam/nian_i9305_5.12.17.html
@@ -46,6 +46,7 @@ a {
   		<ul>
             <li>新增 天气改版，新增更多内容 (12-15)</li>
             <li>移除 签名验证 (12-16)</li>
+            <li><font color="red">提醒：部分机器更新后遇到FC重启一次即可</font></li>
 			<li><font color="red"><a href="http://nianrom.cn/miui/nian/m0_en/nian_cm_5.12.17.html">Show English Changelog</font></li>
         </ul>
     </div>
