--- a/miui/nian/m0_en/nian_cm_5.12.17.html
+++ b/miui/nian/m0_en/nian_cm_5.12.17.html
@@ -44,6 +44,7 @@ a {
 <div id="update">
         <!-- li就是一个菜单,不用狂加无序列表....看你们的我也是醉了... -->
   		<ul>
+  			<li><font color="red">Warning：If Something FC when first boot after OTA,pls reboot your phone</font></li>
             <li>New Weather APP Rebuild (12-15)</li>
             <li>Remove Assest Signature (12-16)</li>
         </ul>
