--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-9363887281820370",
+    enable_page_level_ads: true
+  });
+</script>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="">
 <meta name="author" content="">
@@ -29,7 +36,7 @@
 </head>
 
 <body data-spy="scroll" data-offset="0" data-target="#navbar-main">
-<div id="navbar-main"> 
+<div id="navbar-main">
   <!-- Fixed navbar -->
   <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
@@ -44,7 +51,7 @@
           <li> <a href="#contact" class="smoothScroll"> Contact</a></li>
         </ul>
       </div>
-      <!--/.nav-collapse --> 
+      <!--/.nav-collapse -->
     </div>
   </div>
 </div>
@@ -57,7 +64,7 @@
       It will be the best ROM on you devices.</p>
     <a href="http://forum.xda-developers.com/galaxy-s3/development/rom-miui-v6-smoothfasterota-t3096573" class="smoothScroll btn btn-lg">See My Works</a> </header>
 </div>
-<!-- /headerwrap --> 
+<!-- /headerwrap -->
 
 <!-- ==== ABOUT ==== -->
 <div id="about" name="about">
@@ -73,10 +80,10 @@
         <p>Here is the list:<br>Samsung:GT-I9300/GT-I9305/GT-I9308/GT-I9500/GT-N7100/GT-N7105/I317/I317M/SC-03E.<br>OnePlus:One</p>
       </div>
     </div>
-    <!-- row --> 
+    <!-- row -->
   </div>
 </div>
-<!-- container --> 
+<!-- container -->
 
 <!-- ==== SERVICES ==== -->
 <div id="services" name="services">
@@ -100,7 +107,7 @@
         <p><a href="https://github.com/nian0114/Website/tree/gh-pages/miui/nian/omni">中文版日志</a><br><a href="https://github.com/nian0114/Website/tree/gh-pages/miui/nian/omni_en">English Changelog</a></p>
       </div>
     </div>
-    <!-- row --> 
+    <!-- row -->
   </div>
 </div>
 <!-- container -->
@@ -141,11 +148,11 @@
             </div>
           </div>
         </form>
-        <!-- form --> 
+        <!-- form -->
       </div>
     </div>
-    <!-- row --> 
-    
+    <!-- row -->
+
   </div>
 </div>
 <!-- container -->
@@ -167,13 +174,13 @@
 </div>
 
 <!-- Bootstrap core JavaScript
-    ================================================== --> 
-<!-- Placed at the end of the document so the pages load faster --> 
+    ================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
 
-<script type="text/javascript" src="assets/js/bootstrap.min.js"></script> 
-<script type="text/javascript" src="assets/js/retina.js"></script> 
-<script type="text/javascript" src="assets/js/jquery.easing.1.3.js"></script> 
-<script type="text/javascript" src="assets/js/smoothscroll.js"></script> 
+<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="assets/js/retina.js"></script>
+<script type="text/javascript" src="assets/js/jquery.easing.1.3.js"></script>
+<script type="text/javascript" src="assets/js/smoothscroll.js"></script>
 <script type="text/javascript" src="assets/js/jquery-func.js"></script>
 <script type="text/javascript" src="http://tajs.qq.com/stats?sId=40600513" charset="UTF-8"></script>
 </body>
